# termcompositor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: compositor.rs
proptest-regressions/: framebuffer.txt
src/: animation.rs  compositor.rs  encoder.rs  framebuffer.rs  geometry.rs  layer.rs  lib.rs  main.rs  terminal.rs
tests/: animation.rs  cli.rs  pipeline.rs
