[package]
name = "dashcompositor"
version = "0.4.0"
edition = "2021"
description = "Layer-based graphics compositor for the terminal (Kitty graphics protocol / Sixel)"
license = "MIT"
repository = "https://github.com/216598762/dashcompositor"
readme = "README.md"
keywords = ["terminal", "compositor", "graphics", "kitty", "sixel"]
categories = ["graphics", "rendering"]
authors = ["216598762"]
# Private early-stage scaffold. Remove this line (or set to `true`) before
# publishing to crates.io once the library surface stabilises.
publish = false

[features]
# The `image-decoder` feature pulls in the `image` crate so the
# `dashcompositor::ImageLayer` type is available. Default OFF so a
# default build stays dependency-light (only `terminal_size`).
default = []
image-decoder = ["dep:image"]

[dependencies]
terminal_size = "0.3"
# `image` is adopted as an optional dependency. `default-features =
# false` keeps transitive deps minimal; only the PNG and JPEG
# decoders are enabled (see AGENTS.md §3: evaluate each crate before
# adopting). Bump to a newer minor as needed.
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }

[lib]
name = "dashcompositor"
path = "src/lib.rs"

[[bin]]
name = "dashcompositor"
path = "src/main.rs"

# Other candidate crates (tiny-skia, wgpu, etc.) are still under
# evaluation per AGENTS.md §3 and remain commented out.
#
# [dependencies]
# tiny-skia = { version = "0.11", optional = true }
# wgpu      = { version = "23",  optional = true }
#
# [features]
# cpu-compositor  = ["dep:tiny-skia"]
# gpu-compositor  = ["dep:wgpu"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# AGENTS.md §6: missing-doc warnings are part of "definition of done".
# Promote to deny in CI; here we surface them so authors can fix in dev.
[lints.rust]
missing_docs = "warn"
