[package]
name = "dashcompositor"
version = "0.7.1"
edition = "2021"
description = "Layer-based graphics compositor for the terminal (Kitty graphics protocol / Sixel)"
license = "MIT"
repository = "https://github.com/216598762/dashcompositor"
readme = "README.md"
keywords = ["terminal", "compositor", "graphics", "kitty", "sixel"]
categories = ["graphics", "rendering"]
authors = ["216598762"]
# Private early-stage scaffold. Remove this line (or set to `true`) before
# publishing to crates.io once the library surface stabilises.
publish = false

[features]
# The `image-decoder` feature pulls in the `image` crate so the
# `dashcompositor::ImageLayer` type is available.
# The `kitty-encoder` feature pulls in the `little-kitty` crate so
# the `Protocol::Kitty` arm of `ProtocolEncoder::encode` produces
# real Kitty graphics escape sequences; without it, the Kitty arm
# returns `Err(EncoderError::UnsupportedProtocol("kitty"))`.
# The `sixel-encoder` feature pulls in the `icy_sixel` crate so
# the `Protocol::Sixel` arm produces real Sixel DCS escape
# sequences; without it, the Sixel arm returns
# `Err(EncoderError::UnsupportedProtocol("sixel"))`.
# Default features stay empty so a default build is dep-light.
default = []
image-decoder = ["dep:image"]
kitty-encoder = ["dep:little-kitty"]
sixel-encoder = ["dep:icy_sixel"]

[dependencies]
terminal_size = "0.3"
# `image` is adopted as an optional dependency. `default-features =
# false` keeps transitive deps minimal; only the PNG and JPEG
# decoders are enabled (see AGENTS.md §3: evaluate each crate before
# adopting). Bump to a newer minor as needed.
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
# `little-kitty` is the v0.5.0 first encoder. Per the crates.io
# evaluation (March 2026, version 0.0.3, MIT/Apache-2.0, ~1K
# downloads, ~148K SLoC, actively maintained): a low-level
# interface for the Kitty graphics protocol; supports sprite and
# Unicode placeholder modes; auto-detects tmux passthrough.
little-kitty = { version = "0.0.3", optional = true }
# `icy_sixel` is the v0.6.0 second encoder. Per the crates.io
# evaluation: 100% pure-Rust SIXEL encoder/decoder, MIT/Apache-2.0,
# actively maintained, the de-facto Rust SIXEL library (the
# alternative `sixel-sys` is FFI to the C `libsixel` and has not
# had a 2026 release). Chosen over `sixel`/`sixel-sys` per the
# v0.5.0 recommendation.
icy_sixel = { version = "0.5", optional = true }

[lib]
name = "dashcompositor"
path = "src/lib.rs"

[[bin]]
name = "dashcompositor"
path = "src/main.rs"

# Other candidate crates (tiny-skia, wgpu, kittage, rasteroid) are
# still under evaluation per AGENTS.md §3 and remain commented out.
#
# [dependencies]
# tiny-skia  = { version = "0.11", optional = true }
# wgpu       = { version = "23",  optional = true }
# kittage    = { version = "0.4",  optional = true }
# rasteroid  = { version = "0.3",  optional = true }
#
# [features]
# cpu-compositor  = ["dep:tiny-skia"]
# gpu-compositor  = ["dep:wgpu"]
# auto-detect     = ["dep:rasteroid"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# AGENTS.md §6: missing-doc warnings are part of "definition of done".
# Promote to deny in CI; here we surface them so authors can fix in dev.
[lints.rust]
missing_docs = "warn"
