[package]
name = "dashcompositor"
version = "0.11.0"
edition = "2021"
rust-version = "1.73"
description = "Layer-based graphics compositor for the terminal (Kitty graphics protocol / Sixel)"
license = "MIT"
repository = "https://github.com/216598762/dashcompositor"
readme = "README.md"
keywords = ["terminal", "compositor", "graphics", "kitty", "sixel"]
categories = ["graphics", "rendering"]
authors = ["216598762"]
# v0.11.0: pre-1.0 infrastructure — MSRV policy, CONTRIBUTING.md,
# benchmarks. Publishing is enabled.
publish = true

[features]
# The `image-decoder` feature pulls in the `image` crate so the
# `dashcompositor::ImageLayer` type is available.
# The `kitty-encoder` feature pulls in the `little-kitty` crate so
# the `Protocol::Kitty` arm of `ProtocolEncoder::encode` produces
# real Kitty graphics escape sequences; without it, the Kitty arm
# returns `Err(EncoderError::UnsupportedProtocol("kitty"))`.
# The `sixel-encoder` feature pulls in the `icy_sixel` crate so
# the `Protocol::Sixel` arm produces real Sixel DCS escape
# sequences; without it, the Sixel arm returns
# `Err(EncoderError::UnsupportedProtocol("sixel"))`.
# Default features stay minimal: `font-rasterizer` is on by default
# so TextLayer has real glyph rendering out of the box via the
# bundled Fira Mono font. Encoder features (`kitty-encoder`,
# `sixel-encoder`) and `image-decoder` remain opt-in so the
# default build stays dependency-light.
default = ["font-rasterizer"]
image-decoder = ["dep:image"]
kitty-encoder = ["dep:little-kitty"]
sixel-encoder = ["dep:icy_sixel"]
font-rasterizer = ["dep:fontdue"]

[dependencies]
terminal_size = "0.3"
# `image` is adopted as an optional dependency. `default-features =
# false` keeps transitive deps minimal; only the PNG and JPEG
# decoders are enabled (each crate is evaluated before adoption).
# Bump to a newer minor as needed.
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
# `little-kitty` is the v0.5.0 first encoder. Per the crates.io
# evaluation (March 2026, version 0.0.3, MIT/Apache-2.0, ~1K
# downloads, ~148K SLoC, actively maintained): a low-level
# interface for the Kitty graphics protocol; supports sprite and
# Unicode placeholder modes; emits raw APC escape sequences (passthrough wrapping is the v0.8.0 caller's responsibility).
little-kitty = { version = "0.0.3", optional = true }
# `icy_sixel` is the v0.6.0 second encoder. Per the crates.io
# evaluation: 100% pure-Rust SIXEL encoder/decoder, MIT/Apache-2.0,
# actively maintained, the de-facto Rust SIXEL library (the
# alternative `sixel-sys` is FFI to the C `libsixel` and has not
# had a 2026 release). Chosen over `sixel`/`sixel-sys` per the
# v0.5.0 recommendation.
icy_sixel = { version = "0.5", optional = true }
# `fontdue` is the v0.9.0 font rasterizer. Per the crates.io
# evaluation (July 2026, version 0.9.3, MIT/Apache-2.0/Zlib,
# actively maintained, 100% pure Rust, ~150K SLoC): a
# lightweight, no_std-compatible TrueType/OpenType rasterizer.
# Chosen over `ab_glyph` (requires PBF font conversion) and
# `cosmic-text` (heavier  shaping pipeline) per the v0.9.0
# evaluation. When the `font-rasterizer` feature is enabled,
# `TextLayer` renders real glyph bitmaps into the framebuffer
# using a bundled Fira Mono font. Without the feature, the
# placeholder solid-block render is preserved.
fontdue = { version = "0.9", optional = true }

[dev-dependencies]
# Criterion is the de-facto Rust benchmarking framework (BSD
# 3-Clause, ~25K downloads on crates.io, actively maintained).
# Used for the compositor benchmarks in `benches/`.
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "compositor"
harness = false

[lib]
name = "dashcompositor"
path = "src/lib.rs"

[[bin]]
name = "dashcompositor"
path = "src/main.rs"

# Other candidate crates (tiny-skia, wgpu, kittage, rasteroid) are
# still under evaluation and remain commented out.
#
# [dependencies]
# tiny-skia  = { version = "0.11", optional = true }
# wgpu       = { version = "23",  optional = true }
# kittage    = { version = "0.4",  optional = true }
# rasteroid  = { version = "0.3",  optional = true }
#
# [features]
# cpu-compositor  = ["dep:tiny-skia"]
# gpu-compositor  = ["dep:wgpu"]
# auto-detect     = ["dep:rasteroid"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Missing-doc warnings are part of the "definition of done".
# Promote to deny in CI; here we surface them so authors can fix in dev.
[lints.rust]
missing_docs = "warn"
